--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ strict-vmess-udp = []
 
 [dependencies]
 actix-rt = "2.2.0"
-actix-server = "2.0.0-rc.4"
+actix-server = "2.1.1"
 actix-service = "2.0"
 aead = "0.4.3"
 aes = "0.8.1"
